# ProgrammingTechnologies

./: run.sh
.github/workflows/: c-cpp.yml  task6.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp  test.cpp
task3/: CMakeLists.txt
task4/examples/: 03-main.cpp  CMakeCache.txt  Makefile  cmake_install.cmake
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp
task4/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
task5/cmake-with-flask/: Dockerfile
